--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 - when possible do joins with multiple queries instead of one
 - make updating schema a bit more robust (i.e., allow users update DB schema without stuff breaking)
 - support db schemas that don't fall in line with convention
+- add hooks ala sfMixer to all plugins for AR
